# FlightController

./: .gitignore  CMakeLists.txt  FlightController.gpdsc  FlightController.ioc  Makefile
Inc/: imu.h  main.h
Src/: imu.cpp  main.cpp  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usbd_conf.c
